--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>pvz demo</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- The website JavaScript file -->
-    <script src="/script.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
